en/v2025.2.0/_sources/data_sources/ferc714.rst.txt
=========================================================================================
FERC Form 714 -- Annual Electric Balancing Authority Area and Planning Area Report
=========================================================================================

.. list-table::
   :widths: auto
   :header-rows: 0
   :stub-columns: 1

   * - Source URL
     - https://www.ferc.gov/industries-data/electric/general-information/electric-industry-forms/form-no-714-annual-electric
   * - Source Description
     - Electric transmitting utilities operating balancing authority areas and planning areas with annual peak demand over 200MW are required to file Form 714 with the Federal Energy Regulatory Commission (FERC), reporting balancing authority area generation, actual and scheduled inter-balancing authority area power transfers, and net energy for load, summer-winter generation peaks and system lambda.
   * - Download Size
     - 174 MB
   * - Temporal Coverage
     - 2006-2023
   * - PUDL Code
     - ``ferc714``
   * - Issues
     - `Open FERC Form 714 -- Annual Electric Balancing Authority Area and Planning Area Report issues <https://github.com/catalyst-cooperative/pudl/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Aferc714>`__

PUDL Database Tables
^^^^^^^^^^^^^^^^^^^^

We've segmented the processed data into the following normalized data tables.
Clicking on the links will show you a description of the table as well as
the names and descriptions of each of its fields.


.. list-table::
   :header-rows: 1
   :widths: auto

   * - Data Dictionary
     - Browse Online
   * - :ref:`core_ferc714__respondent_id`
     - https://data.catalyst.coop/pudl/core_ferc714__respondent_id
   * - :ref:`core_ferc714__yearly_planning_area_demand_forecast`
     - https://data.catalyst.coop/pudl/core_ferc714__yearly_planning_area_demand_forecast
   * - :ref:`out_ferc714__hourly_planning_area_demand`
     - Table not published to Datasette.


Background
^^^^^^^^^^

FERC Form 714, otherwise known as the Annual Electric Balancing Authority Area and
Planning Area Report, collects data and provides insights about balancing authority
area and planning area operations.



Download additional documentation
---------------------------------


* :download:`Ferc714 Blank 2022-06-30 (PDF) <ferc714/ferc714_blank_2022-06-30.pdf>`

* :download:`Ferc714 Blank 2025-07-31 (HTML) <ferc714/ferc714_blank_2025-07-31.html>`

* :download:`Ferc714 Instructions 2021-04-16 (PDF) <ferc714/ferc714_instructions_2021-04-16.pdf>`




Data available through PUDL
---------------------------


The data we've integrated from FERC Form 714 includes:

* Hourly electricity demand by utility or balancing authority.
* Annual demand forecast.
* A table identifying the form respondents including their EIA utility or balancing
  authority ID, which allows us to link the FERC-714 data to other information
  reported in :doc:`eia860` and :doc:`eia861`.

With the EIA IDs we can link the hourly electricity demand to a particular geographic
region at the county level because utilities and balancing authorities report their
service territories in :ref:`core_eia861__yearly_service_territory`. From that
information we estimate historical hourly electricity demand by state.

Plant operators reported in :ref:`core_eia860__scd_plants` and generator ownership
information reported in :ref:`core_eia860__scd_ownership` are linked to
:ref:`core_eia860__scd_utilities` and :ref:`core_eia861__yearly_balancing_authority` and
can therefore be linked to the :ref:`core_ferc714__respondent_id` table.




Who submits this data?
----------------------


Electric utilities operating balancing authority areas and planning areas with annual
peak demand over 200MW are required to file FERC Form 714.



What does the original data look like?
--------------------------------------


There are several epochs of FERC-714 and its predecessor data, published in various
formats:

* **1993-1999**: Data collected by NERC regions without standardized electronic filing.
* **1999-2004**: Data collected by FERC without standardized electronic filing.
* **2005**: Data collected by FERC without standardized electronic filing but not
  posted on their website and only available through the regulatory filing eLibrary.
* **2006-2020**: Standardized electronic filing. ASCII encoded CSV files exported from
  a VisualFoxPro database.
* **2021-present**: Standardized electronic filing using the XBRL (eXtensible Business
  Reporting Language) dialect of XML.

We only plan to integrate the data from the standardized electronic reporting era
(2006+) since the format of the earlier data varies for each reporting balancing authority
and utility, and would be very labor intensive to parse and reconcile.



Notable Irregularities
^^^^^^^^^^^^^^^^^^^^^^


Timezone errors
---------------

The original hourly electricity demand time series is plagued with timezone and daylight
savings vs. standard time irregularities, which we have done our best to clean up. The
timestamps in the clean data are all in UTC, with a timezone code stored in a separate
column, so that the times can be easily localized or converted. It's certainly not
perfect, but its much better than the original data and it's easy to work with!

Sign errors
-----------

Not all respondents use the same sign convention for reporting "demand." The vast
majority consider demand / load that they serve to be a positive number, and so we've
standardized the data to use that convention.

Reporting gaps
--------------

There are a lot of reporting gaps, especially for smaller respondents. Sometimes these
are brief, and sometimes they are entire years. There are also a number of outliers and
suspicious values (e.g. a long series of identical consecutive values). We have some
tools that we've built to clean up these outliers in
:mod:`pudl.analysis.timeseries_cleaning`.

Respondent-to-balancing-authority inconsistencies
-------------------------------------------------

Because utilities and balancing authorities occasionally change their service
territories or merge, the demand reported by any individual "respondent" may correspond
to wildly different consumers in different years. To make it at least somewhat possible
to compare the reported data across time, we've also compiled historical service
territory maps for the respondents based on data reported in :doc:`eia861`. However,
it's not always easy to identify which EIA utility or balancing authority corresponds to
a FERC-714 respondent. See the :class:`pudl.output.ferc714.Respondent` class for some
tooling that we've built to address this issue. Other code that underlies this work can
be found in :mod:`pudl.analysis.service_territory` and :mod:`pudl.analysis.spatial`.

The :mod:`pudl.analysis.state_demand` script brings together all of the above to
estimate historical hourly electricity demand by state for 2006-2020.

Combining XBRL and CSV data
---------------------------

The format of the company identifiers (CIDs) used in the CSV data (2006-2020) and the
XBRL data (2021+) differs. To link respondents between both data formats, we manually
map the IDs from both datasets and create a ``respondent_id_ferc714`` in
:mod:`pudl.package_data.glue.respondent_id_ferc714.csv`.

This CSV builds on the `migrated data
<https://www.ferc.gov/filing-forms/eforms-refresh/migrated-data-downloads>`__ provided
by FERC during the transition from CSV to XBRL data, which notes that:

  Companies that did not have a CID prior to the migration have been assigned a CID that
  begins with R, i.e., a temporary RID. These RIDs will be replaced in future with the
  accurate CIDs and new datasets will be published.

The file names of the migrated data (which correspond to CSV IDs) and the respondent
CIDs in the migrated files provide the basis for ID mapping. Though CIDs are intended to
be static, some of the CIDs in the migrated data weren't found in the actual XBRL data,
and the same respondents were reporting data using different CIDs. To ensure accurate
record matching, we manually reviewed the CIDs for each respondent, matching based on
name and location. Some quirks to note:

* All respondents are matched 1:1 from CSV to XBRL data. Unmatched respondents mostly
  occur due to mergers, splits, acquisitions, and companies that no longer exist.
* Some CIDs assigned during the migration process do not appear in the data. Given the
  intention by FERC to make these CIDs permanent, they are still included in the mapping
  CSV in case these respondents re-appear. All temporary IDs (beginning with R) were
  removed.



PUDL Data Transformations
^^^^^^^^^^^^^^^^^^^^^^^^^

To see the transformations applied to the data in each table, you can read the
docstrings for :mod:`pudl.transform.ferc714` created for each table's
respective transform function.